--- a/templates/landingpage/landing.html
+++ b/templates/landingpage/landing.html
@@ -90,7 +90,8 @@
     <!-- Trading iew chart end-->
 
     <nav class="navbar bg-white navbar-expand-lg sticky-top">
-      <div class="container-small px-0 px-sm-3"><a class="navbar-brand flex-1 flex-lg-grow-0" href="{% url 'landingpage:homepage' %}">
+      <div class="container-small px-0 px-sm-3"><a class="navbar-brand flex-1 flex-lg-grow-0"
+          href="{% url 'landingpage:homepage' %}">
           <div class="d-flex align-items-center"><img src="{% static 'assets/img/icons/logo-second.png' %}"
               alt="phoenix" width="27" />
             <p class="logo-text ms-2">TradeLaa</p>
@@ -140,7 +141,7 @@
                   data-bs-toggle="tooltip" data-bs-placement="left" title="Switch theme"><span class="icon"
                     data-feather="sun"></span></label></div>
             </li>
-            {% if request.user.is_authenticated %}
+            {% if request.user.is_authenticated or request.COOKIES.access_token %}
             <button class="btn btn-phoenix-primary order-0" type="button">
               <a href="{% url 'dashboard:dashboard' %}">Dashboard</a>
             </button>
@@ -148,9 +149,7 @@
             <button class="btn btn-link text-900 order-1 order-lg-0" type="button">
               <a href="{% url 'accounts:account_login' %}">Sign in</a>
             </button>
-            {% endif %}
 
-            {% if not request.user.is_authenticated %}
             <button class="btn btn-phoenix-primary order-0" type="submit">
               <span class="fw-bold">Sign Up</span>
             </button>
@@ -187,7 +186,8 @@
           <div class="col-12 col-lg-6 text-lg-start text-center pt-8 pb-6 order-0">
             <h1 class="fs-5 fs-lg-6 fs-md-7 fs-lg-6 fs-xl-7 fs fw-black mb-4"><span
                 class="text-primary me-3">TradeLaa</span>for<br />your Financial Needs</h1>
-            <p class="mb-5">Standard, modern and Elegant Trading Analysis Platform for your next Trading Journey so you don’t have to look
+            <p class="mb-5">Standard, modern and Elegant Trading Analysis Platform for your next Trading Journey so you
+              don’t have to look
               further. Sign up or check the demo below.</p><a class="btn btn-lg btn-primary rounded-pill me-3" href="#!"
               role="button">Sign up</a><a class="btn btn-link me-2 fs-0 p-0 text-decoration-none" href="#!"
               role="button">Check Demo<span class="fa-solid fa-angle-right ms-2 fs--1"></span></a>
@@ -265,9 +265,8 @@
               <h4 class="text-primary fw-bolder mb-4">Features</h4>
               <h2 class="mb-3 text-black lh-base">A fully integrated suite<br />For Trading</h2>
               <p class="mb-5">With the power of TradeLaa, you can now focus only on Trading Profits for your digital
-                assets, while leaving the Analysis on us!</p><a
-                class="btn btn-lg btn-outline-primary rounded-pill me-2" href="#!" role="button">Find out more<i
-                  class="fa-solid fa-angle-right ms-2"></i></a>
+                assets, while leaving the Analysis on us!</p><a class="btn btn-lg btn-outline-primary rounded-pill me-2"
+                href="#!" role="button">Find out more<i class="fa-solid fa-angle-right ms-2"></i></a>
             </div>
             <div class="col-sm-6 col-lg-3 mt-7 text-center text-lg-start">
               <div class="h-100 d-flex flex-column justify-content-between">
@@ -289,7 +288,8 @@
                     src="{% static 'assets/img/icons/illustrations/pie.png' %}" width="48" height="48" alt="" />
                   <div>
                     <h5 class="fw-bolder mb-2">All-in-one solution</h5>
-                    <p class="fw-semi-bold lh-sm">Show your Profit and growth graph in one place with TradeLaa Platform!</p>
+                    <p class="fw-semi-bold lh-sm">Show your Profit and growth graph in one place with TradeLaa Platform!
+                    </p>
                   </div>
                   <div><a class="btn btn-link me-2 p-0 fs--1" href="#!" role="button">Check Demo<i
                         class="fa-solid fa-angle-right ms-2"></i></a></div>
@@ -305,7 +305,8 @@
             <div class="col-lg-6">
               <h6 class="text-primary mb-2 ls-2">SIGNAL</h6>
               <h3 class="fw-bolder mb-3">Recieve the signals instantly</h3>
-              <p class="mb-5 px-md-7 px-lg-0">TradeLaa makes it possible for you to quickly and effectively receive every
+              <p class="mb-5 px-md-7 px-lg-0">TradeLaa makes it possible for you to quickly and effectively receive
+                every
                 signal. No need for drawn-out waiting.</p><a class="btn btn-link me-2 p-0 fs--1" href="#!"
                 role="button">Check Demo<i class="fa-solid fa-angle-right ms-2"></i></a>
             </div>
@@ -318,7 +319,8 @@
             <div class="col-lg-6">
               <h6 class="text-primary mb-2 ls-2">SIGNAL</h6>
               <h3 class="fw-bolder mb-3">See Your Revenue Grow</h3>
-              <p class="mb-5 px-md-7 px-lg-0">Grow with TradeLaa. We help you with everything you might need., We make it
+              <p class="mb-5 px-md-7 px-lg-0">Grow with TradeLaa. We help you with everything you might need., We make
+                it
                 easy and keep it simple.</p><a class="btn btn-link me-2 p-0 fs--1" href="#!" role="button">Check Demo<i
                   class="fa-solid fa-angle-right ms-2"></i></a>
             </div>
