--- a/templates/dashboard/common_navbar.html
+++ b/templates/dashboard/common_navbar.html
@@ -49,7 +49,7 @@
                     {% endif %}
 
                     <span class="nav-item-wrapper">
-                        <a class="nav-link label-1" href="{% url 'dashboard:trades_list' %}" role="button" data-bs-toggle="" aria-expanded="false">
+                        <a class="nav-link label-1" href="{% if request.user.user_type.type == 'RETAIL' %}{% url 'dashboard:retail-trade-list' %}{% else %}{% url 'dashboard:trades_list' %}{% endif %}" role="button" data-bs-toggle="" aria-expanded="false">
                             <div class="d-flex align-items-center">
                                 <span class="nav-link-icon">
                                     <span data-feather="layers"></span>
