--- a/templates/dashboard/common_js.html
+++ b/templates/dashboard/common_js.html
@@ -41,4 +41,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
 
+<script src="{% static 'assets/js/dashboard/firebase_cred.js' %}"></script>
+
 {% endblock %}
