--- a/templates/dashboard/retail_trades.html
+++ b/templates/dashboard/retail_trades.html
@@ -40,6 +40,13 @@
             cursor: pointer;
 
         }
+
+        .tradingview-widget-container{
+            width: 100%;
+        }
+        .tradingview-widget-container iframe{
+            width: 100% !important;
+        }
     </style>
 </head>
 
@@ -66,13 +73,28 @@
                     <div class="col-md-4">
                         <div class="card h-100 hover-actions-trigger">
                             <div class="card-body pb-1">
-                                <div class="d-flex align-items-center"> <strong>{{t.ticker_name}}</strong>,
-                                    {{t.strike_side}} at {{t.entry_price}} </div>
+                                <div class="d-flex align-items-center"> <strong>{{t.ticker_name}}</strong></div>
                                 <span class="badge badge-phoenix fs--2 mb-4 badge-phoenix-success"><span
                                         class="badge-label">completed</span></span>
                                 <div class="d-flex align-items-center mb-4">
-                                    <p class="fw-bold mb-0 lh-1">Market Price : <span
-                                            class="ms-1 text-1100">8,742$</span></p>
+                                    <!-- <p class="fw-bold mb-0 lh-1">Market Price : <span
+                                            class="ms-1 text-1100">8,742$</span></p> -->
+
+
+                                    <!-- TradingView Widget BEGIN -->
+                                    <div class="tradingview-widget-container">
+                                        <div class="tradingview-widget-container__widget"></div>
+                                        <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                                                {
+                                                    "symbol": "NSE:{{t.symbol}}",
+                                                        "width": "100%",
+                                                            "colorTheme": "light",
+                                                                "isTransparent": false,
+                                                                    "locale": "in"
+                                                }
+                                            </script>
+                                    </div>
+                                    <!-- TradingView Widget END -->
                                 </div>
 
                                 <div class="d-flex align-items-center mb-4">
@@ -206,6 +228,7 @@
     {% block common_js %}
     {% endblock %}
 
+    <script src="{% static 'assets/js/dashboard/user_realtime_trade.js' %}"></script>
 
     <script>
         $("#inlineRadio1").change(function () {
@@ -228,110 +251,7 @@
 
     <script>
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyBfJgLCFlQDmv-Kubf2gIZpHB4GsYPjVRY",
-            authDomain: "tradelaa-92281.firebaseapp.com",
-            databaseURL: "https://tradelaa-92281-default-rtdb.firebaseio.com",
-            projectId: "tradelaa-92281",
-            storageBucket: "tradelaa-92281.appspot.com",
-            messagingSenderId: "1077762853140",
-            appId: "1:1077762853140:web:5ea761736a26be21645a01",
-            measurementId: "G-47R5FL8C7G"
-        };
-        const app = firebase.initializeApp(firebaseConfig);
 
-
-        let entry_price, target_price, ticker_name, stop_loss, target;
-
-        var today_date = new Date();
-        var today_date_str = today_date.getUTCFullYear() + "-" + today_date.getUTCMonth() + 1 + "-" + today_date.getUTCDate()
-
-        let trades_main_wrapper = $("#trades_main_wrapper")
-        console.log("main wrapper ", trades_main_wrapper)
-
-        var entry = firebase.database().ref('trades/' + today_date_str)
-        entry.on('child_added', (snapshot) => {
-            console.log("workinng gere", snapshot.val())
-            entry_price = snapshot.val().EntryPrice
-            target_price = snapshot.val().TargetPrice
-            ticker_name = snapshot.val().TickerName
-            stop_loss = snapshot.val().StopLoss
-
-            const trade_template =
-                `
-     <div class="col-md-4">
-                        <div class="card h-100 hover-actions-trigger">
-                            <div class="card-body pb-1">
-                                <div class="d-flex align-items-center"> <strong>${ticker_name}</strong>, {{t.strike_side}} at {{t.entry_price}} </div>
-                                <span class="badge badge-phoenix fs--2 mb-4 badge-phoenix-success"><span
-                                        class="badge-label">completed</span></span>
-                                <div class="d-flex align-items-center mb-4">
-                                    <p class="fw-bold mb-0 lh-1">Market Price : <span
-                                            class="ms-1 text-1100">8,742$</span></p>
-                                </div>
-
-                                <div class="d-flex align-items-center mb-4">
-                                    <p class="fw-bold mb-0 lh-1">Entry Price : <span class="ms-1 text-1100">${entry_price}</span>
-                                    </p>
-                                </div>
-
-                                <div class="d-flex align-items-center mb-4">
-                                    <p class="fw-bold mb-0 lh-1">Stop Loss : <span class="ms-1 text-1100">${stop_loss}</span>
-                                    </p>
-                                </div>
-
-                                <div class="d-flex align-items-center mb-4">
-                                    <p class="fw-bold mb-0 lh-1">Target Price : <span
-                                            class="ms-1 text-1100">${target_price}</span>
-                                    </p>
-                                </div>
-
-                                <div class="d-flex justify-content-between text-700 fw-semi-bold">
-                                    <p class="mb-2"> Progress</p>
-                                    <p class="mb-2 text-1100">100%</p>
-                                </div>
-                                <div class="progress bg-success-100">
-                                    <div class="progress-bar rounded bg-success" role="progressbar"
-                                        aria-label="Success example" style="width: 100%" aria-valuenow="25"
-                                        aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                
-                                <div class="row align-items-center">
-                                    <div class="col-md-7">
-                                        <div class="d-flex flex-column mt-4">
-                                            <p class="mb-0 fw-bold fs--1">Started :<span class="fw-semi-bold text-600 ms-1"> 17th Nov. 2020</span></p>
-                                            <p class="mb-0 fw-bold fs--1">Max Loss :<span class="fw-semi-bold text-600 ms-1 text-danger"> 400$</span></p>
-                                            <p class="mb-0 fw-bold fs--1">Max Profit :<span class="fw-semi-bold text-600 ms-1 text-success"> 600$</span></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-5">
-                                        <input class="form-control" id="exampleFormControlInput" placeholder="Quantity" type="number">
-                                    </div>
-                                </div>
-                                
-
-                                <hr>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="d-flex justify-content-center p-2">
-                                            <div class="btn btn-phoenix-primary">AUTO ENTER</div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="d-flex justify-content-center p-2">
-                                            <div class="btn btn-phoenix-primary">MANUAL ENTER</div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-    `
-
-            console.log(trade_template)
-            trades_main_wrapper.append(trade_template)
-        })
 
 
     </script>
