--- a/templates/dashboard/create_analysis.html
+++ b/templates/dashboard/create_analysis.html
@@ -85,13 +85,13 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6 col-md-4">
+                            <!-- <div class="col-sm-6 col-md-4">
                                 <div class="form-floating">
                                     <input name="market_price" class="form-control" id="floatingInputGrid" type="text"
                                         placeholder="Project title" />
                                     <label for="floatingInputGrid">Market Price</label>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="col-sm-6 col-md-4">
                                 <div class="form-floating">
@@ -142,24 +142,6 @@
                     </div>
                 </div>
 
-                <!-- TradingView Widget BEGIN -->
-                <div class="tradingview-widget-container">
-                    <div class="tradingview-widget-container__widget"></div>
-                    <script type="text/javascript"
-                        src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
-                        
-                            {
-                                "symbol": "BINANCE:BTCUSDT",
-                                    "width": 350,
-                                        "colorTheme": "light",
-                                            "isTransparent": false,
-                                                "locale": "in"
-                            }
-                            
-                        </script>
-                </div>
-                
-                <!-- TradingView Widget END -->
                 {% include 'dashboard/common_footer.html' %}
                 {% block common_footer %}
                 {% endblock %}
