--- a/templates/dashboard/retail_trades.html
+++ b/templates/dashboard/retail_trades.html
@@ -53,7 +53,6 @@
             position: relative;
             top: -16px;
             left: -15px;
-            background: cornflowerblue;
             color: white;
             padding: 2px;
             display: inline-block;
@@ -142,7 +141,7 @@
 
                                 <div class="row align-items-center">
                                     <div class="col-md-7">
-                                        <div class="d-flex flex-column mt-4">
+                                        <div class="d-flex flex-column mt-5">
                                             <p class="mb-0 fw-bold fs--1">Started :<span
                                                     class="fw-semi-bold text-600 ms-1"> 17th Nov. 2020</span></p>
                                             <p class="mb-0 fw-bold fs--1">Max Loss :<span
@@ -152,25 +151,24 @@
                                         </div>
                                     </div>
                                     <div class="col-md-5">
-                                        <input class="form-control" id="exampleFormControlInput" placeholder="Quantity"
-                                            type="number">
+                                        <div class="d-flex flex-column">
+                                            <p class="mb-0 fw-bold fs--1">RR :<span class="fw-semi-bold text-600 ">
+                                                    1:2</span></p>
+
+                                        </div>
                                     </div>
                                 </div>
 
 
                                 <hr>
                                 <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="d-flex justify-content-center p-2">
-                                            <button type="button" data-bs-toggle="modal" class="btn btn-phoenix-primary"
-                                                data-bs-target="#verticallyCentered">AUTO ENTER</button>
+                                    <div class="col-md-12">
+                                        <div class="d-flex justify-content-center m-2">
+                                            <button type="button" data-bs-toggle="modal" class="btn btn-lg btn-success"
+                                                data-bs-target="#verticallyCentered" >Execute</button>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="d-flex justify-content-center p-2">
-                                            <div class="btn btn-phoenix-primary">MANUAL ENTER</div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
 
                             </div>
@@ -258,27 +256,24 @@
                     <div class="modal-body">
                         <!-- TradingView Widget BEGIN -->
                         <div class="tradingview-widget-container">
-                            <div id="tradingview_9f46f"></div>
-                            <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-                            <script type="text/javascript">
-                                new TradingView.widget(
+                            <div class="tradingview-widget-container__widget"></div>
+
+                            <script type="text/javascript"
+                                src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js">
                                     {
-                                        "autosize": true,
-                                        "symbol": "NASDAQ:AAPL",
-                                        "interval": "D",
-                                        "timezone": "Etc/UTC",
-                                        "theme": "light",
-                                        "style": "1",
-                                        "locale": "in",
-                                        "toolbar_bg": "#f1f3f6",
-                                        "enable_publishing": false,
-                                        "allow_symbol_change": true,
-                                        "container_id": "tradingview_9f46f"
+                                        "symbol": "BINANCE:BTCUSDT",
+                                            "autosize": true,
+                                                "locale": "en",
+                                                    "dateRange": "12M",
+                                                        "colorTheme": "light",
+                                                            "isTransparent": false,
+                                                                "autosize": false,
+                                                                    "largeChartUrl": ""
                                     }
-                                );
-                            </script>
+                                </script>
                         </div>
                         <!-- TradingView Widget END -->
+
 
                         <h3 class="mb-5 mt-2">Trade Details</h3>
                         <div class="trade-details-container">
@@ -292,43 +287,78 @@
                                     <div>Rs 999</div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="fw-bold">Entry Price</div>
+                                    <div class="fw-bold">Target Price</div>
                                     <div>Rs 999</div>
                                 </div>
                             </div>
                             <hr>
-                            <div class="fs--5 mx-3 fixed-parametes-title">Editable Parameters</div>
-                            <div class="row">
-                                <div class="col-md-6 d-flex align-items-center">
+                            <div class="fs--5 mx-3 change-paramters-title fixed-parametes-title bg-primary">Editable Parameters</div>
+                            <div class="row w-100">
+                                <div class="col-6">
                                     <div class="fw-bold mx-3">Quantity</div>
-                                    <div><input class="form-control" type="number" min="1" minvalue="1" name="" id=""
-                                            placeholder="Quantity"></div>
+                                </div>
+                                <div class="col-6">
+                                    <input class="form-control" type="number" min="1" minvalue="1" name="" id=""
+                                        placeholder="Quantity">
                                 </div>
                             </div>
+
                             <hr>
 
-                            <div class="fs--5 mx-3 fixed-parametes-title">Fixed Parameters</div>
+                            <div class="fs--5 mx-3 fixed-parametes-title fixed-para-main bg-primary">Fixed Parameters</div>
                             <div class="row g-3 justify-content-space-evenly">
-                                <div class="col-md-6 d-flex align-items-center">
-                                    <div class="fw-bold mx-3">SL</div>
-                                    <div><input class="form-control" type="number" value="999" min="1" minvalue="1"
-                                            name="" id="" placeholder="Quantity" disabled></div>
+                                <div class="col-md-12 d-flex align-items-center">
+                                    <div class="row w-100">
+                                        <div class="col-6">
+                                            <div class="fw-bold mx-3">Stop Loss</div>
+                                        </div>
+                                        <div class="col-6">
+                                            <input class="form-control trade-input-controls" type="number" value="999" min="1" minvalue="1"
+                                                name="" id="" placeholder="Quantity" disabled>
+                                        </div>
+                                    </div>
+
                                 </div>
-                                <div class="col-md-6 d-flex align-items-center">
-                                    <div class="fw-bold mx-3">Target</div>
-                                    <div><input class="form-control" type="number" value="999" min="1" minvalue="1"
-                                            name="" id="" placeholder="Quantity" disabled></div>
+                                <div class="col-md-12 d-flex align-items-center">
+                                    <div class="row w-100">
+                                        <div class="col-6">
+                                            <div class="fw-bold mx-3">Target Price</div>
+                                        </div>
+                                        <div class="col-6">
+                                            <input class="form-control trade-input-controls" type="number" value="999" min="1" minvalue="1"
+                                                name="" id="" placeholder="Quantity" disabled>
+                                        </div>
+                                    </div>
+
                                 </div>
-                                <div class="col-md-6 d-flex align-items-center">
-                                    <div class="fw-bold mx-3">Entry</div>
-                                    <div><input class="form-control" type="number" value="999" min="1" minvalue="1"
-                                            name="" id="" placeholder="Quantity" disabled></div>
+
+                                <div class="col-md-12 d-flex align-items-center">
+                                    <div class="row w-100">
+                                        <div class="col-md-6">
+                                            <div class="fw-bold mx-3">Entry Price</div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <input class="form-control trade-input-controls" type="number" value="999" min="1" minvalue="1"
+                                                name="" id="" placeholder="Quantity" disabled>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
-                    <div class="modal-footer"><button class="btn btn-primary" type="button">Okay</button><button
-                            class="btn btn-outline-primary" type="button" data-bs-dismiss="modal">Cancel</button></div>
+                    <div class="modal-footer">
+                        <div class="form-check form-switch" style="margin-right: auto;">
+                            <input class="form-check-input " type="checkbox" role="switch" id="manualswitch" onclick="manual_switch(this)">
+                            <label class="form-check-label" for="manualswtich">Switch to Manual</label>
+                        </div>
+                        <div>
+                            <button class="btn btn-success" type="button">Execute</button>
+                            <button class="btn btn-outline-primary" type="button"
+                                data-bs-dismiss="modal">Cancel</button>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -364,9 +394,23 @@
     </script>
 
     <script>
+        
 
+        function manual_switch(element){
+            if($(element).is(":checked")){
+                $(".trade-input-controls").each(function(key, value){
+                    $(value).removeAttr("disabled")
+                })
+                $(".fixed-para-main").text("Editable Parameters")
+            }
+            else{
+                $(".trade-input-controls").each(function(key, value){
+                    $(value).attr("disabled", '')
+                })
+                $(".fixed-para-main").text("Fixed Parameters")
+            }
 
-
+        }
 
     </script>
 </body>
