--- a/templates/dashboard/common_navbar.html
+++ b/templates/dashboard/common_navbar.html
@@ -60,6 +60,20 @@
                             </div>
                         </a>
                     </span>
+
+                    <span class="nav-item-wrapper">
+                        <a class="nav-link label-1" href="{% if request.user.user_type.type == 'RETAIL' %}{% url 'dashboard:funds' %}{% endif %}" role="button" data-bs-toggle="" aria-expanded="false">
+                            <div class="d-flex align-items-center">
+                                <span class="nav-link-icon">
+                                    <i class="far fa-money-bill-alt"></i>
+                                </span>
+                                
+                                <span class="nav-link-text-wrapper">
+                                    <span class="nav-link-text">Funds</span>
+                                </span>
+                            </div>
+                        </a>
+                    </span>
                     <!-- parent pages-->
                     
             </li>
